DataToDeploy/objects/Fake_Product__c.object
<CustomObject>
    <label>Fake Product</label>
    <nameField>
        <label>Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fake Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>creationAt__c</fullName>
        <label>creationAt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>description__c</fullName>
        <label>description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>price__c</fullName>
        <label>price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>title__c</fullName>
        <label>title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>updatedAt__c</fullName>
        <label>updatedAt</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>title__c</columns>
        <columns>price__c</columns>
        <columns>description__c</columns>
        <columns>creationAt__c</columns>
        <columns>updatedAt__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>